# aoc22

./: .gitignore  aoc22.cabal
outputs/: day1.txt  day10.txt  day11.txt  day15.txt  day16.txt  day17.txt  day18.txt  day20.txt  day21.txt  day3.txt  day5.txt  day7.txt  day8.txt  day9.txt
src/: Day10.hs  Day10_2_Mini.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day1Mini.hs  Day20.hs  Day21.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs  Main.hs  Util.hs  day1.hs  day2.hs  day3.hs  main.hs  util.hs
