cabal-version:      2.4
name:               aoc22
version:            0.1.0.0
synopsis: Advent of Code 2022 solutions in Haskell
-- description:
-- license:
author:             Erik Lagercrantz
maintainer:         erik.lagercrantz@klarna.com
-- category:

executable aoc22
    main-is:          main.hs
    other-modules:    Util Day1
    build-depends:    base ^>=4.16.4.0, split
    hs-source-dirs:   src
    default-language: Haskell2010

executable day1mini
    main-is:          day1mini.hs
    other-modules:    Util
    build-depends:    base ^>=4.16.4.0, split
    hs-source-dirs:   src
    default-language: Haskell2010
