cabal-version:      2.4
name:               aoc22
version:            0.1.0.0
synopsis: Advent of Code 2022 solutions in Haskell
-- description:
-- license:
author:             Erik Lagercrantz
maintainer:         erik.lagercrantz@klarna.com
-- category:

executable aoc22
    main-is:          Main.hs
    other-modules:    Util Day1 Day2 Day3 Day4 Day5 Day6 Day7 Day8 Day9 Day10 Day11 Day12 Day13 DayX
    build-depends:    base ^>=4.16.3.0, split, containers, megaparsec, search-algorithms
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: LambdaCase, NamedFieldPuns, ScopedTypeVariables, BangPatterns

executable day1mini
    main-is:          Day1Mini.hs
    other-modules:    Util
    build-depends:    base ^>=4.16.3.0, split, containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable day10mini
    main-is:          Day10_2_Mini.hs
    build-depends:    base ^>=4.16.3.0, split, containers
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: LambdaCase
